test_files/netlist_connected/valid/valid_07.net
XU1 in out 0 NC_01 AMP
R1 in 0 1k
R2 out 0 1k
.tran 1m
.backanno
.end
