test_files/netlist_connected/invalid/invalid_04_line_4.net
V1 in 0 5
R1 in mid 1k
R2 mid 0 1k
C1 out 0 100n
.tran 1m
.backanno
.end
